Added NuGet package icons to all packable projects.

--- a/AspNetCore/src/Umbrella.AspNetCore.Identity.EntityFrameworkCore/Umbrella.AspNetCore.Identity.EntityFrameworkCore.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Identity.EntityFrameworkCore/Umbrella.AspNetCore.Identity.EntityFrameworkCore.csproj
@@ -25,6 +25,7 @@
 		<Description>This package contains code to allow integration of the Umbrella.DataAccess packages with ASP.NET Core Identity.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -42,6 +43,10 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\DataAccess\src\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 	
 </Project>
