--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DynamicImage/Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.DynamicImage/Umbrella.AspNetCore.WebUtilities.DynamicImage.csproj
@@ -27,6 +27,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -48,5 +49,9 @@
 	<ItemGroup>
 	  <Folder Include="Middleware\" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
 </Project>
