--- a/DataAccess/src/Umbrella.DataAccess.EF6/Umbrella.DataAccess.EF6.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EF6/Umbrella.DataAccess.EF6.csproj
@@ -26,6 +26,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -45,5 +46,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
 </Project>
