--- a/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore.SqlServer/Umbrella.DataAccess.EntityFrameworkCore.SqlServer.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.EntityFrameworkCore.SqlServer/Umbrella.DataAccess.EntityFrameworkCore.SqlServer.csproj
@@ -23,6 +23,7 @@
 		<Description>Contains SqlServer specific utilities for Entity Framework Core.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -37,4 +38,8 @@
 	  <ProjectReference Include="..\Umbrella.DataAccess.Abstractions\Umbrella.DataAccess.Abstractions.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
