--- a/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
+++ b/Legacy/src/Umbrella.Legacy.Utilities/Umbrella.Legacy.Utilities.csproj
@@ -26,6 +26,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -43,6 +44,10 @@
 		<Reference Include="System.Configuration" />
 		<Reference Include="System" />
 		<Reference Include="Microsoft.CSharp" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
 </Project>
