--- a/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
@@ -26,6 +26,7 @@
     </Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -35,5 +36,9 @@
   <ItemGroup>
     <Reference Include="System.Web" />
   </ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
   
 </Project>
