--- a/Logging/src/Umbrella.Extensions.Logging.ApplicationInsights/Umbrella.Extensions.Logging.ApplicationInsights.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.ApplicationInsights/Umbrella.Extensions.Logging.ApplicationInsights.csproj
@@ -29,6 +29,7 @@
     </Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -40,4 +41,8 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
