--- a/Core/src/Umbrella.WebUtilities.DynamicImage/Umbrella.WebUtilities.DynamicImage.csproj
+++ b/Core/src/Umbrella.WebUtilities.DynamicImage/Umbrella.WebUtilities.DynamicImage.csproj
@@ -26,6 +26,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -39,6 +40,10 @@
 	  <ProjectReference Include="..\..\..\DynamicImage\src\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
 	  <ProjectReference Include="..\..\..\FileSystem\src\Umbrella.FileSystem.Abstractions\Umbrella.FileSystem.Abstractions.csproj" />
 	  <ProjectReference Include="..\Umbrella.WebUtilities\Umbrella.WebUtilities.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 	
 </Project>
