--- a/Core/src/Umbrella.WebUtilities.FileSystem/Umbrella.WebUtilities.FileSystem.csproj
+++ b/Core/src/Umbrella.WebUtilities.FileSystem/Umbrella.WebUtilities.FileSystem.csproj
@@ -26,6 +26,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -40,4 +41,8 @@
 	  <ProjectReference Include="..\Umbrella.WebUtilities\Umbrella.WebUtilities.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
