--- a/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.DataAnnotations/Umbrella.Legacy.WebUtilities.DataAnnotations.csproj
@@ -26,6 +26,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -46,4 +47,8 @@
 		<Reference Include="System.ComponentModel.DataAnnotations" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
