--- a/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
+++ b/Logging/src/Umbrella.Extensions.Logging.Log4Net/Umbrella.Extensions.Logging.Log4Net.csproj
@@ -24,6 +24,7 @@
 		<Description>This package contains implementations of the ILogger and ILoggerProvider to allow log4net to be used with the Microsoft.Extensions.Logging infrastructure.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -35,4 +36,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
