--- a/TypeScript/src/Umbrella.TypeScript.Annotations/Umbrella.TypeScript.Annotations.csproj
+++ b/TypeScript/src/Umbrella.TypeScript.Annotations/Umbrella.TypeScript.Annotations.csproj
@@ -26,6 +26,7 @@
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -35,4 +36,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
