--- a/DynamicImage/benchmark/Umbrella.DynamicImage.Benchmark/Umbrella.DynamicImage.Benchmark.csproj
+++ b/DynamicImage/benchmark/Umbrella.DynamicImage.Benchmark/Umbrella.DynamicImage.Benchmark.csproj
@@ -17,14 +17,14 @@
     <EmbeddedResource Remove="BenchmarkDotNet.Artifacts\**" />
     <None Remove="BenchmarkDotNet.Artifacts\**" />
   </ItemGroup>
-  
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Umbrella.DynamicImage\Umbrella.DynamicImage.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
     <PackageReference Include="Moq" Version="4.14.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
   </ItemGroup>
 
 </Project>
