--- a/DynamicImage/src/Umbrella.DynamicImage.Caching.Disk/Umbrella.DynamicImage.Caching.Disk.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Caching.Disk/Umbrella.DynamicImage.Caching.Disk.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
-		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.DynamicImage.xml</DocumentationFile>
+		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.DynamicImage.Caching.Disk.xml</DocumentationFile>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
@@ -16,13 +16,13 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageId>Umbrella.DynamicImage</PackageId>
+		<PackageId>Umbrella.DynamicImage.Caching.Disk</PackageId>
 		<Version>3.0.0-preview-0090</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2020</Copyright>
 		<Description>
-			This package contains come common features shared by other Umbrella.DynamicImage.* packages such as image URL generation and parsing capabilites as well as caching mechanisms for in-memory and physical disk.
+			This package provides a Disk based caching mechanism for the Umbrella.DynamicImage infrastructure.
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
@@ -37,13 +37,12 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
-		<ProjectReference Include="..\..\..\FileSystem\src\Umbrella.FileSystem.Disk\Umbrella.FileSystem.Disk.csproj" />
-		<ProjectReference Include="..\..\..\Core\src\Umbrella.Utilities\Umbrella.Utilities.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\FileSystem\src\Umbrella.FileSystem.Disk\Umbrella.FileSystem.Disk.csproj" />
+	  <ProjectReference Include="..\Umbrella.DynamicImage.Abstractions\Umbrella.DynamicImage.Abstractions.csproj" />
+	</ItemGroup>
+	
 </Project>
