--- a/DynamicImage/src/Umbrella.DynamicImage.Caching.AzureStorage/Umbrella.DynamicImage.Caching.AzureStorage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.Caching.AzureStorage/Umbrella.DynamicImage.Caching.AzureStorage.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -17,7 +17,7 @@
   
   <PropertyGroup>
 		<PackageId>Umbrella.DynamicImage.Caching.AzureStorage</PackageId>
-    <Version>3.0.0-preview-0090</Version>
+    <Version>3.0.0-preview-0091</Version>
     <Authors>Zinofi Digital Ltd</Authors>
     <Company>Zinofi Digital Ltd</Company>
     <Copyright>Zinofi Digital Ltd 2020</Copyright>
