--- a/DataAccess/src/Umbrella.DataAccess.Remote/Umbrella.DataAccess.Remote.csproj
+++ b/DataAccess/src/Umbrella.DataAccess.Remote/Umbrella.DataAccess.Remote.csproj
@@ -34,11 +34,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
   </ItemGroup>
 
 	<ItemGroup>
