--- a/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.FileSystem/Umbrella.AspNetCore.WebUtilities.FileSystem.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.WebUtilities.FileSystem/Umbrella.AspNetCore.WebUtilities.FileSystem.csproj
@@ -17,7 +17,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageId>Umbrella.AspNetCore.FileSystem</PackageId>
+		<PackageId>Umbrella.AspNetCore.WebUtilities.FileSystem</PackageId>
 		<Version>3.0.0-preview-0102</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
