--- a/AspNetCore/src/Umbrella.AspNetCore.ApiAuthorization.IdentityServer/Umbrella.AspNetCore.ApiAuthorization.IdentityServer.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.ApiAuthorization.IdentityServer/Umbrella.AspNetCore.ApiAuthorization.IdentityServer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
@@ -18,7 +18,7 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.AspNetCore.ApiAuthorization.IdentityServer</PackageId>
-		<Version>3.0.0-preview-0104</Version>
+		<Version>3.0.0-preview-0105</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2020</Copyright>
