--- a/AspNetCore/src/Umbrella.AspNetCore.ApiAuthorization.IdentityServer/Umbrella.AspNetCore.ApiAuthorization.IdentityServer.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.ApiAuthorization.IdentityServer/Umbrella.AspNetCore.ApiAuthorization.IdentityServer.csproj
@@ -41,6 +41,13 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
 
