--- a/AspNetCore/src/Umbrella.AspNetCore.Components/Umbrella.AspNetCore.Components.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Components/Umbrella.AspNetCore.Components.csproj
@@ -1,10 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<RazorLangVersion>3.0</RazorLangVersion>
+		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<Configurations>Debug;Release;AzureDevOps</Configurations>
-		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.Extensions.Logging.Log4Net.Azure.xml</DocumentationFile>
+		<DocumentationFile>bin\Release\netstandard2.1\Umbrella.AspNetCore.Components.xml</DocumentationFile>
 		<PublishRepositoryUrl>true</PublishRepositoryUrl>
 		<EmbedUntrackedSources>true</EmbedUntrackedSources>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
@@ -16,13 +18,13 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PackageId>Umbrella.Extensions.Logging.Log4Net.Azure</PackageId>
+		<PackageId>Umbrella.AspNetCore.Components</PackageId>
 		<Version>3.0.0-preview-0136</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2020</Copyright>
 		<Description>
-			This package builds on the Umbrella.Extensions.Logging.Azure package by writing log messages to Azure Table Storage.
+			This package contains code to be used with Razor Components projects, e.g. Blazor.
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
@@ -30,7 +32,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="log4net" Version="2.0.12" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -38,11 +39,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Umbrella.Extensions.Logging.Azure\Umbrella.Extensions.Logging.Azure.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
 		<None Include="..\..\..\icon.png" Pack="true" PackagePath="\" />
 	</ItemGroup>
-	
+
 </Project>
