--- a/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
+++ b/Xamarin/src/Umbrella.Xamarin/Umbrella.Xamarin.csproj
@@ -22,9 +22,7 @@
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2020</Copyright>
-		<Description>
-			This package contains various utilities and controls for use with Xamarin Forms projects.
-		</Description>
+		<Description>This package contains various utilities and controls for use with Xamarin Forms projects.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
 		<PackageIcon>icon.png</PackageIcon>
