--- a/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
+++ b/AspNetCore/src/Umbrella.AspNetCore.Blazor/Umbrella.AspNetCore.Blazor.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
@@ -19,7 +19,7 @@
 
 	<PropertyGroup>
 		<PackageId>Umbrella.AspNetCore.Blazor</PackageId>
-		<Version>3.0.0-preview-0137</Version>
+		<Version>3.0.0-preview-0138</Version>
 		<Authors>Zinofi Digital Ltd</Authors>
 		<Company>Zinofi Digital Ltd</Company>
 		<Copyright>Zinofi Digital Ltd 2020</Copyright>
