--- a/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
+++ b/DynamicImage/src/Umbrella.DynamicImage.FreeImage/Umbrella.DynamicImage.FreeImage.csproj
@@ -2,41 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <Configurations>Debug;Release;AzureDevOps</Configurations>
 		<DocumentationFile>bin\Release\netstandard2.0\Umbrella.DynamicImage.FreeImage.xml</DocumentationFile>
-	<PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
-		<Optimize>true</Optimize>
-		<DefineConstants>AzureDevOps</DefineConstants>
-	</PropertyGroup>
   
   <PropertyGroup>
 		<PackageId>Umbrella.DynamicImage.FreeImage</PackageId>
-    <Version>3.0.0-preview-0142</Version>
-    <Authors>Zinofi Digital Ltd</Authors>
-    <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
-    <Description>
-      This package contains an implementation of the IDynamicImageResizer built using the .NET Core wrapper for FreeImage. The repo for this wrapper can be found on github: https://github.com/matgr1/FreeImage-dotnet-core
-    </Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
-		<PackageIcon>icon.png</PackageIcon>
-		<IncludeSymbols>true</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Description>This package contains an implementation of the IDynamicImageResizer built using the .NET Core wrapper for FreeImage. The repo for this wrapper can be found on github: https://github.com/matgr1/FreeImage-dotnet-core</Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FreeImage.Standard" Version="4.3.8" />
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
