--- a/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
+++ b/Legacy/src/Umbrella.Legacy.WebUtilities.Bundling/Umbrella.Legacy.WebUtilities.Bundling.csproj
@@ -2,37 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
-    <LangVersion>latest</LangVersion>
-    <Configurations>Debug;Release;AzureDevOps</Configurations>
 		<DocumentationFile>bin\Release\net461\Umbrella.Legacy.WebUtilities.Bundling.xml</DocumentationFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
-    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)'=='AzureDevOps'">
-		<Optimize>true</Optimize>
-		<DefineConstants>AzureDevOps</DefineConstants>
-	</PropertyGroup>
 
   <PropertyGroup>
     <PackageId>Umbrella.Legacy.WebUtilities.Bundling</PackageId>
-    <Version>3.0.0-preview-0142</Version>
-    <Authors>Zinofi Digital Ltd</Authors>
-    <Company>Zinofi Digital Ltd</Company>
-    <Copyright>Zinofi Digital Ltd 2020</Copyright>
-    <Description>
-      This package contains bundling utilities to aid using the legacy ASP.NET stack with the Microsoft.AspNet.Web.Optimization package.
-    </Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/zinofi/Umbrella</PackageProjectUrl>
-		<PackageIcon>icon.png</PackageIcon>
-		<IncludeSymbols>true</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <Description>This package contains bundling utilities to aid using the legacy ASP.NET stack with the Microsoft.AspNet.Web.Optimization package.</Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
